--- a/components/main-header/main-header.module.css
+++ b/components/main-header/main-header.module.css
@@ -1,7 +1,6 @@
-
 .header {
-    color: $colour-pink-primary;
-    font-size: 32px;
+    color: var(--colour-pink-primary);
+    font-size: 2.2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
