Card and content layout for cupcakes, styling for cards

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 
   --colour-pink-primary: #D649A4;
   --colour-pink-secondary: #FEE2EE;
+  --colour-plum-primary: #6D4B86;
 }
 
 @media (prefers-color-scheme: dark) {
