--- a/components/cupcakes/cupcake-item.module.css
+++ b/components/cupcakes/cupcake-item.module.css
@@ -3,18 +3,25 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 500px;
-  border-radius: 4px;
+  height: 600px;
+  border-radius: 10px;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   transition: all 0.3s ease-in-out;
   background: white;
-  padding: 5px;
+  padding: 25px;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .headerText h2 {
   color: var(--colour-plum-primary);
   text-align: center;
+  font-size: 2em;
 }
 
 .image {
@@ -22,7 +29,8 @@
 }
 
 .price {
-  color: var(--colour-pink-primary)
+  color: var(--colour-pink-primary);
+  font-size: 1.75em;
 }
 
 .summary {
