--- a/components/button/add-to-cart.module.css
+++ b/components/button/add-to-cart.module.css
@@ -11,3 +11,19 @@
 .button:hover {
   cursor: pointer;
 }
+
+@keyframes scaleIn {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.button:active {
+  animation: scaleIn 0.3s ease;
+}
