--- a/components/cupcakes/cupcake-item.module.css
+++ b/components/cupcakes/cupcake-item.module.css
@@ -4,12 +4,14 @@
   justify-content: space-between;
   align-items: center;
   height: 600px;
+  max-width: 400px;
   border-radius: 10px;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   transition: all 0.3s ease-in-out;
   background: white;
   padding: 25px;
+  margin: auto;
 }
 
 .header {
